kube/issoDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isso
  namespace: katchblog
spec: 
  selector:
    matchLabels:
      app: isso
  replicas: 1
  template:
    metadata:
      labels:
        app: isso
    spec:
      containers:
      - name: isso
        image: jonas27test/isso:latest
        args: ["isso", "/isso/bin/isso","-c", "$ISSO_SETTINGS"]
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - mountPath: /db
            name: isso-storage
          - mountPath: /config
            name: isso-config
      volumes:
      - name: isso-config
        hostPath:
          path: "/volumes/katchblog/isso-storage"
      - name: isso-storage
        hostPath:
          path: "/volumes/katchblog/isso-config"
      restartPolicy: Always
