kube/katchblog.yaml
apiVersion: v1
kind: Service
metadata:
  name: katchblog
  namespace: katchblog
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  - port: 443
    name: https
    targetPort: 4443
  selector:
    app: katchblog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katchblog
  namespace: katchblog
spec: 
  selector:
    matchLabels:
      app: katchblog
  replicas: 1
  template:
    metadata:
      labels:
        app: katchblog
    spec:
      containers:
      - name: katchblog
        image: jonas27test/goserver:v0.0.4
        # args: ["-serverCrt", "tls.crt","-serverKey", "tls.key"]
        ports:
        - name: http
          containerPort: 8080
        - name: https 
          containerPort: 4443
        volumeMounts:
          - mountPath: /static
            name: katchblog-storage
          # - mountPath: "/cert/"
          #   name: katchblog-tls
          #   readOnly: true
      volumes:
      - name: katchblog-storage
        hostPath:
          path: "/volumes/katchblog"
      - name: katchblog-tls
        secret:
          secretName: katchblog-secret
      restartPolicy: Always
