kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: katchblog
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /*
spec:
  rules:
  - host: katchblog.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: katchblog
          servicePort: 80
  - host: www.katchblog.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: katchblog
          servicePort: 80
